[package]
    name = "x86_serial_logger"
    version = "0.1.1-rc.2"
    authors = ["NPEX42 <NPEX42@gmail.com>"]
    edition = "2018"
    description = "A Simple x86 Serial Logger, Taken from https://github.com/phil-opp/blog_os/blob/post-12/src/serial.rs"
    license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    uart_16550 = "0.2.15"
    spin = "0.9.0"
    x86_64 = "0.14.4"

[dependencies.lazy_static]
    default-features = false
    version = "1.4.0"

[features]
    no_std = []
